package org.example.TEMARIO_CURSO.TEMA7.Colecciones.Actividad;

public enum TipoSuperficie {
    TIERRA_BATIDA, CEMENTO, HIERBA;
}
