package org.example.TEMARIO_CURSO.TEMA7.Colecciones.Actividad;

public enum TipoTechado {
    INDOOR, EXTERIOR;
}
